# mesop-demo

./: README.md  pyproject.toml
src/: main.py
src/frontend/: app_classes.py  handlers.py  main.py  state.py
src/reverse_o_matic/: reverse_o_matic.py
