[project]
name = "reverse_o_matic"
version = "0.1.0"
authors = [
  { name = "Kel Markert", email = "kel.markert@gmail.com" },
]
description = "A silly package that reverses things."
readme = "README.md"  # Optional, if you have a README
requires-python = ">=3.11"  # Specify your Python version requirements
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Replace with your license
    "Operating System :: OS Independent",
]
dependencies = [
    "dotenv==0.9.9",
]

[project.optional-dependencies]
frontend = [
  "mesop==0.14.1",
]

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/georeason", "src/frontend"]
